# gangbiao-ai-coach

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  gwzg.md  main.py  pyproject.toml  target.md  岗位标准化母体.history.0614-origin.json  岗位标准化母体.history.json  岗位标准化母体610.history.json  岗位标准化母体610.md
alembic/versions/: 005_managed_users.py  006_feedback_tables.py  008_chat_session_current_template.py
app/api/: deps.py  router.py
app/core/: config.py  logger.py
app/extractors/: manager.py  spreadsheet.py
app/models/: chat.py  db_models.py
app/services/: admin_conversation_service.py  chat_service.py  context_service.py  llm_service.py  managed_user_service.py  prompts.py  session_service.py  template_classifier.py  template_prompt_service.py
deploy/nginx/: default.conf
docs/: cas-sso-production-deployment.md  production-deployment.md  岗位标准化AI教练 Spec文档.md
docs/performance/: concurrency-capacity-playbook.md
frontend/: next.config.mjs  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: chat.ts
master/: D1.history.json  D2.history.json  D3.history.json  D4.history.json  D5.history.json  D6.history.json  D7.history.json  D8.hisotry.json  D8.history.json  D9.history.json  _generic.history.json
master/bak/: D5.history-20260712.json
mvp/: main_origin.py
scripts/: backup_db.sh  diag_8cases.py  diag_labelmap.py  dump_oneline.py  eval_classifier.py  target.md  target2.md
static/: index.html
tests/: conftest.py  openai_test.py
(+113 files in other folders)
